creating a listing functionality
